# rust-back-end-example

./: .gitignore  Cargo.toml  README.md  SERVER_START.bat  database.db  rustfmt.toml
src/: lib.rs  main.rs
src/api/responses/: error.rs  user.rs
src/config/: mod.rs
src/core/: mod.rs  traits.rs  types.rs
src/front-end/temp/: index.html  style.css
src/gateways/: user.rs
src/handlers/: user.rs
src/inputs/: user.rs
src/models/: user.rs
src/responders/: user.rs
src/sql/user/: __create__.sql  __delete__.sql  create_table.sql  delete.sql  find.sql  find_all.sql  insert.sql  update.sql
src/store/: state.rs
src/templates/: hello.html
src/templates/user/: model.html  users.html
src/transaction_scripts/: user.rs
src/utils/: mod.rs
static/: asset-manifest.json  index.html  main.js  precache-manifest.1651c23a27446a6d815f6fef6b5ea9f7.js  service-worker.js  styles.css
static/static/css/: main.f5700eff.chunk.css  main.f5700eff.chunk.css.map
static/static/js/: 2.08d0dc96.chunk.js  2.08d0dc96.chunk.js.map  main.312338dc.chunk.js  main.312338dc.chunk.js.map
