[package]
name = "rust-backend"
version = "0.1.0"
authors = ["jhaboic <josiphaboic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.29"
env_logger = "0.7.0"
actix-web = "1.0.8"
actix-files = "0.1.6"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
actix-rt = "0.2.5"
rs-uuid = "0.3.1"
r2d2 = "0.8.6"
postgres = "0.15.2"
rusqlite = { version = "0.20.0", features = ["bundled"] }
juniper = "0.14.0"
listenfd = "0.3.3"
log = "0.4.8"
actix = "0.8.3"
