[package]
name = "back_end"
version = "0.1.0"
authors = ["jhaboic <josiphaboic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
env_logger = "0.7.1"
actix-web = "2.0.0"
actix-files = "0.2.1"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
actix-rt = "1.0.0"
rs-uuid = "0.3.1"
# r2d2 = "0.8.7"
# postgres = "0.15.2"
rusqlite = { version = "0.21.0", features = ["bundled"] }
# juniper = "0.14.2"
listenfd = "0.3.3"
log = "0.4.8"
# actix = "0.9.0"
# actix-cors = "0.2.0"
# serde_rusqlite = "0.23.0"
